optimized sub-optimal code

--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,11 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="none"/> 
     <meta name="viewport" content="initial-scale=1, viewport-fit=cover, width=device-width">
-    <title>portfolio achim</title>
+    <title>portfolio </title>
     <link rel="icon" type="image/x-icon" href="./images/ui/InfinityBird.svg" >
     <link rel="manifest" href="manifest.json">
 
-    <!--  these images must be loaded otherwise the modals weirdly restyle when opened for the first time-->
+    <!--  these images must be loaded otherwise the modals restyle when opened for the first time-->
     <link rel="preload" as="image" href="./images/About/About_Boii.webp">
     <link rel="preload" as="image" href="./images/About/AboutIntro.webp">
     <link rel="preload" as="image" href="./images/AT-420/AT_Hero.webp">
